--- a/package.json
+++ b/package.json
@@ -14,9 +14,24 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
+    "bootstrap": "^4.5.2",
     "gatsby": "^2.24.47",
+    "gatsby-background-image": "^1.1.2",
+    "gatsby-image": "^2.4.16",
+    "gatsby-plugin-anchor-links": "^1.1.1",
+    "gatsby-plugin-sass": "^2.3.12",
+    "gatsby-plugin-sharp": "^2.6.31",
+    "gatsby-source-filesystem": "^2.3.27",
+    "gatsby-transformer-sharp": "^2.5.14",
+    "intersection-observer": "^0.11.0",
+    "jquery": "^3.5.1",
+    "node-sass": "^4.14.1",
+    "popper.js": "^1.16.1",
     "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "react-dom": "^16.12.0",
+    "react-slick": "^0.27.10",
+    "slick-carousel": "^1.8.1",
+    "strip-ansi": "^6.0.0"
   },
   "devDependencies": {
     "prettier": "2.0.5"
