--- a/package.json
+++ b/package.json
@@ -14,11 +14,15 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.30",
+    "@fortawesome/free-solid-svg-icons": "^5.14.0",
+    "@fortawesome/react-fontawesome": "^0.1.11",
     "bootstrap": "^4.5.2",
     "gatsby": "^2.24.47",
     "gatsby-background-image": "^1.1.2",
     "gatsby-image": "^2.4.16",
     "gatsby-plugin-anchor-links": "^1.1.1",
+    "gatsby-plugin-fontawesome-css": "^1.0.0",
     "gatsby-plugin-sass": "^2.3.12",
     "gatsby-plugin-sharp": "^2.6.31",
     "gatsby-source-filesystem": "^2.3.27",
