--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "gatsby-image": "^2.4.16",
     "gatsby-plugin-anchor-links": "^1.1.1",
     "gatsby-plugin-fontawesome-css": "^1.0.0",
+    "gatsby-plugin-react-helmet": "^3.3.11",
     "gatsby-plugin-sass": "^2.3.12",
     "gatsby-plugin-sharp": "^2.6.31",
     "gatsby-source-filesystem": "^2.3.27",
@@ -33,6 +34,7 @@
     "popper.js": "^1.16.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-helmet": "^6.1.0",
     "react-slick": "^0.27.10",
     "slick-carousel": "^1.8.1",
     "strip-ansi": "^6.0.0"
