--- a/package.json
+++ b/package.json
@@ -1,52 +1,52 @@
 {
-  "name": "gatsby-starter-hello-world",
-  "private": true,
-  "description": "A simplified bare-bones starter for Gatsby",
-  "version": "0.1.0",
-  "license": "0BSD",
-  "scripts": {
-    "build": "gatsby build",
-    "develop": "gatsby develop",
-    "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\"",
-    "start": "npm run develop",
-    "serve": "gatsby serve",
-    "clean": "gatsby clean",
-    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
-  },
-  "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.30",
-    "@fortawesome/free-solid-svg-icons": "^5.14.0",
-    "@fortawesome/react-fontawesome": "^0.1.11",
-    "bootstrap": "^4.5.2",
-    "gatsby": "^2.24.47",
-    "gatsby-background-image": "^1.1.2",
-    "gatsby-image": "^2.4.16",
-    "gatsby-plugin-anchor-links": "^1.1.1",
-    "gatsby-plugin-fontawesome-css": "^1.0.0",
-    "gatsby-plugin-react-helmet": "^3.3.11",
-    "gatsby-plugin-sass": "^2.3.12",
-    "gatsby-plugin-sharp": "^2.6.31",
-    "gatsby-source-filesystem": "^2.3.27",
-    "gatsby-transformer-sharp": "^2.5.14",
-    "intersection-observer": "^0.11.0",
-    "jquery": "^3.5.1",
-    "node-sass": "^4.14.1",
-    "popper.js": "^1.16.1",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
-    "react-helmet": "^6.1.0",
-    "react-slick": "^0.27.10",
-    "slick-carousel": "^1.8.1",
-    "strip-ansi": "^6.0.0"
-  },
-  "devDependencies": {
-    "prettier": "2.0.5"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/gatsbyjs/gatsby-starter-hello-world"
-  },
-  "bugs": {
-    "url": "https://github.com/gatsbyjs/gatsby/issues"
-  }
+name: "gatsby-starter-hello-world",
+private: true,
+description: "A simplified bare-bones starter for Gatsby",
+version: "0.1.0",
+license: "0BSD",
+scripts: {
+build: "gatsby build",
+develop: "gatsby develop",
+format: "prettier --write "**/*.{js,jsx,ts,tsx,json,md}"",
+start: "npm run develop",
+serve: "gatsby serve",
+clean: "gatsby clean",
+test: "echo "Write tests! -> https://gatsby.dev/unit-testing" && exit 1"
+},
+dependencies: {
+@fortawesome/fontawesome-svg-core: "^1.2.30",
+@fortawesome/free-solid-svg-icons: "^5.14.0",
+@fortawesome/react-fontawesome: "^0.1.11",
+bootstrap: "^4.5.2",
+gatsby: "^2.24.47",
+gatsby-background-image: "^1.1.2",
+gatsby-image: "^2.4.16",
+gatsby-plugin-anchor-links: "^1.1.1",
+gatsby-plugin-fontawesome-css: "^1.0.0",
+gatsby-plugin-react-helmet: "^3.3.11",
+gatsby-plugin-sass: "^2.3.12",
+gatsby-plugin-sharp: "^2.6.31",
+gatsby-source-filesystem: "^2.3.27",
+gatsby-transformer-sharp: "^2.5.14",
+intersection-observer: "^0.11.0",
+jquery: "^3.5.1",
+node-sass: "^4.14.1",
+popper.js: "^1.16.1",
+react: "^16.12.0",
+react-dom: "^16.12.0",
+react-helmet: "^6.1.0",
+react-slick: "^0.27.10",
+slick-carousel: "^1.8.1",
+strip-ansi: "^6.0.0"
+},
+devDependencies: {
+prettier: "2.0.5"
+},
+repository: {
+type: "git",
+url: "https://github.com/gatsbyjs/gatsby-starter-hello-world"
+},
+bugs: {
+url: "https://github.com/gatsbyjs/gatsby/issues"
+}
 }
