sitemap and robot.txt

--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
     "gatsby-plugin-anchor-links": "^1.1.1",
     "gatsby-plugin-fontawesome-css": "^1.0.0",
     "gatsby-plugin-react-helmet": "^3.3.11",
+    "gatsby-plugin-robots-txt": "^1.5.3",
     "gatsby-plugin-sass": "^2.3.12",
     "gatsby-plugin-sharp": "^2.6.31",
+    "gatsby-plugin-sitemap": "^2.4.13",
     "gatsby-source-filesystem": "^2.3.27",
     "gatsby-transformer-sharp": "^2.5.14",
     "intersection-observer": "^0.11.0",
